# dryrun

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.md  dev.dockerfile  pyproject.toml
docs/source/: index.rst
docs/source/en/: index.rst
docs/source/fr/: index.rst
dryrun/: dryrun.py
tests/: test_dryrun.py
