[tool.poetry]
name = "Dryrun"
version = "0.0.1"
description = "Dryrun: A Python CLI tool to backup, apply, test, and automatically revert system configurations."
authors = [
    "Jean-Nicolas Boulay Desjardins",
]
license = "MIT"
readme = "README.md"
keywords = ["test", "dryrun"]
classifiers=[
    'Development Status :: 1 - Planning',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.11',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Utilities',
]
packages = [{include='amadlacli', from='.'}]

[tool.poetry.scripts]
amadlacli = 'amadlacli.cli:main'

[tool.poetry.dependencies]
python = "^3.11.0"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"
click = "^8.1.3"
jschon = "^0.11.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0"
pre-commit = "^3.0.4"
behave = "^1.2.6"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
source="https://github.com/AmadlaOrg/dryrun"
GitHub= "https://github.com/AmadlaOrg"
documentation = "https://amadla.org/en/amadla-cli/docs/latest"
saythanks = "https://saythanks.io/to/amadla.org"
changelog = "https://github.com/AmadlaOrg/dryrun/blob/CHANGELOG.rst"


[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E",
    "F",
    "I", #isort
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ICN", # flake8-import-conventions
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PLC", # Pylint - Convention
    "PLE", # Pylint - Error
    "PLR", # Pylint - Refactor
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
